=========
CHANGELOG
=========

0.3.0 (unreleased)
==================

** Removed (backward incompatibility) **

* Totally remove crispy_forms and floppy_forms integration


0.2.3 (2014-12-15)
==================

* Handle swappable User model
* Embed spinner, bootstrap-confirm and add a bootstrap-3-confirm
* Remove crispy_forms dependency


0.2.2 (2014-11-14)
==================

* Fix permission check for attachments


0.2.0 (2014-11-12)
==================

* Allow to override file types from request.


0.1.3 (2014-11-07)
==================

* Fix packaging of locale files


0.1.2 (2014-11-07)
==================

* Fix upload regular expressions for author and legend


0.1.1 (2014-11-03)
==================

* Fix missing SVG media in package


0.1.0 (2014-10-23)
==================

* Initial working version